added scrolling fixed on header

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Adrien Gagnon" />
 		<meta
 			name="description"
-			content="This app manages playlists from Spotify."
+			content="This is a portfolio website for Adrien Gagnon"
 		/>
 		<!-- <meta
             http-equiv="Content-Security-Policy"
@@ -26,7 +26,7 @@
 			src="https://open.spotify.com/embed-podcast/iframe-api/v1"
 			async
 		></script>
-		<title>Playlist Manager</title>
+		<title>Porfolio</title>
 	</head>
 	<body>
 		<div id="root"></div>
