added background svgs

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             href="./assets/favicon.png"
             type="image/png"
         />
-        <title>Porfolio</title>
+        <title>Adrien Gagnon</title>
     </head>
     <body>
         <div id="root"></div>
